# FirecrackerPlayground

./: README.md  build-release.sh  build.sh  createNetwork.sh  gues_and_networks.sh  prepareGuestNetwork.sh  prepare_and_run_guest.sh  q  run-release.sh  set_guest_kernel.sh  set_guest_rootfs.sh  start_guest.sh  turn_on_firecracker.sh
firecracker/: README.md
firecracker/src/: my_changelog.txt
firecracker/src/devices/: Cargo.toml
firecracker/src/devices/src/: lib.rs
firecracker/src/devices/src/virtio/net/: README.txt  TcpChecksumInvestigation.txt  bug_log.txt  device.rs  event_handler.rs  mod.rs
firecracker/src/dpdk_component/: Cargo.toml  README  build.rs  iperf3_host  iperf3_microVM
firecracker/src/dpdk_component/include/: static-functions.h
firecracker/src/dpdk_component/src/: Strategy_1.txt  Strategy_1_2.txt  Strategy_1_3.txt  Strategy_2.txt  Strategy_2_2.txt  Strategy_2_2_Loopback_EC2.txt  Strategy_2_3.txt  bindingsErrno.rs  bindingsMbuf.rs  client.rs  dpdk_component.rs  lib.rs  static-functions.c
firecracker/tests/framework/: vm_config.json
