[package]
name = "dpdk_component"
version = "0.1.0"
authors = ["mihaidogaru2537 <dogarumihai2537@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
